--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,7 @@
 						{% assign tags = site.tags | sort %}
 						{% for tag in tags %}
 							<li>
-								#{{ tag | first | slugify }}
-								<a href="/tags/tag/" title="{{ tag | replace:'-', ' ' }}">
+								<a href="/tags/{{ tag | first | slugify }}/" title="{{ tag | replace:'-', ' ' }}">
 									<img src="/assets/img/folder.ico" />{{ tag | replace:'-', ' ' }}</a>
 							</li>
 						{% endfor %}
