--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,9 @@
 						{% assign tags = site.tags | sort %}
 						{% for tag in tags %}
 							<li>
-								<a href="/tags/{{ tag | first | slugify }}/" title="{{ tag | replace:'-', ' ' }}">
-									<img src="/assets/img/folder.ico" />{{ tag | replace:'-', ' ' }}</a>
+								tag
+								<a href="/tags/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}">
+									<img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a>
 							</li>
 						{% endfor %}
 					</ul>
