--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,18 @@
 							<a href="/tags/JavaScript/" title="JavaScript">
 							<img src="/assets/img/folder.ico" />JavaScript</a>
 						</li>
+						<li>
+							<a href="/tags/NodeJS/" title="JavaScript">
+							<img src="/assets/img/folder.ico" />NodeJS</a>
+						</li>
+						<li>
+							<a href="/tags/Python/" title="JavaScript">
+							<img src="/assets/img/folder.ico" />Python</a>
+						</li>
+						<li>
+							<a href="/tags/Linux/" title="JavaScript">
+							<img src="/assets/img/folder.ico" />Linux</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
