--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,22 +33,10 @@
 			<ul id="tag-list">
 				<li><a href="/" ><img src="/assets/img/disk.png" />(C:)</a>
 					<ul>
-						<li>
-							<a href="/tags/JavaScript/" title="JavaScript">
-							<img src="/assets/img/folder.ico" />JavaScript</a>
-						</li>
-						<li>
-							<a href="/tags/NodeJS/" title="JavaScript">
-							<img src="/assets/img/folder.ico" />NodeJS</a>
-						</li>
-						<li>
-							<a href="/tags/Python/" title="JavaScript">
-							<img src="/assets/img/folder.ico" />Python</a>
-						</li>
-						<li>
-							<a href="/tags/Linux/" title="JavaScript">
-							<img src="/assets/img/folder.ico" />Linux</a>
-						</li>
+						{% assign tags = site.tags | sort %}
+ 							{% for tag in tags %}
+								<li><a href="/tags/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a></li>
+							{% endfor %}
 					</ul>
 				</li>
 			</ul>
