--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
         		{{ content }}
 				{% if page.title %}
 
-					{% include topbar.html %}
+					{% include disqus_comments.html %}
 
 					{% include donate.html %}
 				{% endif %}
